Remove incomplete logic to detect AMD K2 CPU's

The check for cpu.family() == 15 will also trigger for newer
ThreadRipper CPU's, resulting in a DCHECK on debug builds and
potentially suboptimal behavior in release builds. To fix this,
the check would have to take the extFamily() and maybe model()
into account, but I couldn't find the correct values for the
AMD K2 CPU's anywhere.

Anyhow, it is unclear whether newer Windows versions are still
affected by the original problem. The commit that introduced the
original check - https://codereview.chromium.org/4092 - is more
than 9 years old. There are hints that the underlying issue got
fixed in Windows XP SP2 and/or Windows 7. Hence this patch just
removes the check.

Bug: 863855
Change-Id: I26d6e282ec6116ec40fbf86e750367d15dc31604
Reviewed-on: https://chromium-review.googlesource.com/1138241
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577097}
Former-commit-id: c37f2d0f2eca5ba9bb1af333266cbb418ce66d04